@@ -21,12 +21,18 @@ import com.google.gwt.thirdparty.guava.common.base.Splitter;
 import com.google.gwt.thirdparty.guava.common.collect.Sets;
 
 import java.io.File;
+import java.lang.reflect.Method;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLClassLoader;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedHashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 /**
  * Creates instances of {@link ResourceLoader}.
@@ -54,16 +60,67 @@ public class ResourceLoaders {
      */
     @Override
     public List<URL> getClassPath() {
-      List<URL> result = new ArrayList<>();
-      LinkedHashSet<String> uniqueClassPathEntries =
-          Sets.newLinkedHashSet(Splitter.on(File.pathSeparatorChar).split(JAVA_CLASS_PATH.value()));
-      for (String entry : uniqueClassPathEntries) {
-        try {
-          result.add(Paths.get(entry).toUri().toURL());
-        } catch (MalformedURLException e) {
+      // URL is very slow in collections, so we'll get set semantics using string keys,
+      // then just return a list of the values.
+      Map<String, URL> result = new LinkedHashMap<>();
+      String java9Modules = System.getProperty("gwt.java9.modules");
+      for (ClassLoader candidate = contextClassLoader; candidate != null; candidate = candidate.getParent()) {
+        if (candidate instanceof URLClassLoader) {
+          for (URL url : ((URLClassLoader) candidate).getURLs()) {
+            result.put(url.toExternalForm(), url);
+          }
+        } else  if (java9Modules != null) {
+        // If the user specified java 9 modules to load for classpath,
+        // we'll want to do it all through reflection,
+        // to avoid losing support for java 8
+          try {
+            final Class<?> modRef = candidate.loadClass("java.lang.module.ModuleReference");
+            final Method getLocation = modRef.getMethod("location");
+            // In the case of java 9, the only way to scrape classloaders is this ugly reflection
+            // on an internal class (used to be a URLClassLoader).
+            // you will need to add `--add-opens java.base/jdk.internal.loader=myJava9ModuleName`
+            // to your gwt runtime as a VM argument
+            final Class<?> loader = candidate.loadClass("jdk.internal.loader.BuiltinClassLoader");
+            // TODO: Don't use classloader for resource loading
+            final Method findMod = loader.getDeclaredMethod("findModule", String.class);
+            // This is why we have to open the package; just being visible is not enough
+            // to be allowed to act reflectively
+            findMod.setAccessible(true);
+
+            for (String source : java9Modules.split(",")) {
+              System.out.println("Loading java 9 module " + source);
+              Object mod = findMod.invoke(candidate, source);
+              // Safe to case; we must be in java 9 to get here,
+              // so we know that this cast should be safe
+              Optional<URI> location = (Optional<URI>) getLocation.invoke(mod);
+              if (location.isPresent()) {
+                final URL url = location.get().toURL();
+                result.put(url.toExternalForm(), url);
+              }
+            }
+          } catch (Exception ignored) {
+            if (ignored instanceof InterruptedException) {
+              Thread.currentThread().interrupt();
+              throw new RuntimeException(ignored);
+            }
+            ignored.printStackTrace();
+          }
         }
       }
-      return result;
+      if (result.isEmpty()) {
+        List<URL> items = new ArrayList<>();
+        LinkedHashSet<String> uniqueClassPathEntries =
+            Sets.newLinkedHashSet(Splitter.on(File.pathSeparatorChar).split(JAVA_CLASS_PATH.value()));
+        for (String entry : uniqueClassPathEntries) {
+          try {
+            items.add(Paths.get(entry).toUri().toURL());
+          } catch (MalformedURLException e) {
+
+          }
+          return items;
+        }
+      }
+      return new ArrayList<>(result.values());
     }
 
     @Override
